--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "node": ">=17"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.32.6",
     "@yext/sites-components": "^1.0.0-rc.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.16.0",
+    "lucide-react": "^0.268.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^1.6.2"
+    "react-hook-form": "^7.45.4",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
@@ -28,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "@vitejs/plugin-react": "^2.1.0",
-    "@yext/pages": "^1.0.0-rc.0",
+    "@yext/pages": "^1.0.0-rc.1",
     "autoprefixer": "^10.4.8",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.7",
