--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.32.6",
     "@yext/sites-components": "^1.0.0-rc.2",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
+    "cross-fetch": "^4.0.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.268.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
