--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.32.6",
@@ -23,10 +24,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "cross-fetch": "^4.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.268.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
