--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "dev": "pages dev",
-    "prod": "pages prod"
+    "prod": "pages prod",
+    "build:local": "pages build"
   },
   "engines": {
     "node": ">=17"
