--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pages-starter-react-locations",
+  "name": "mobile-platform-starter",
   "version": "0.0.0",
   "description": "An example repository to help users get started with React development on Yext Pages",
   "author": "sumo@yext.com",
