--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "cross-fetch": "^4.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.0",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "lucide-react": "^0.268.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
