--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "uuid": "^9.0.0",
