--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
     "lucide-react": "^0.268.0",
+    "moment": "^2.29.4",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
