added buttons for missing content fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "outDir": "./dist",
     "module": "esnext",
     "baseUrl": ".",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
   },
   "include": ["src"]
 }
